tests/errors/003-typechecking/002-undeclared-identifier/001-basic.xxx
// @TODO This outputs two errors, when one should be sufficient.
x := y
